fix: adjust products alignment and toast animation

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @keyframes start {
 	from {
-		top: 0;
+		top: -100px;
 	}
 	to {
 		top: 20px;
@@ -12,7 +12,7 @@
 		top: 20px;
 	}
 	to {
-		top: 3px;
+		top: -50px;
 	}
 }
 
@@ -148,8 +148,11 @@ main article:nth-child(even) {
 	background-color: #fafafa;
 }
 
-.presentation {
+main article {
 	padding: 2rem 4rem;
+}
+
+.presentation {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 3rem;
@@ -180,10 +183,8 @@ main article:nth-child(even) {
 
 .products-area,
 .price-area {
-	padding: 2rem 0rem;
 	text-align: left;
 	display: grid;
-	justify-content: center;
 }
 
 .products-area .products-item:nth-child(even) div {
@@ -208,7 +209,6 @@ main article:nth-child(even) {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	color: #2b2b2b;
-	max-width: 1000px;
 	gap: 3rem;
 	background-color: #f7f9fc;
 }
@@ -247,7 +247,6 @@ main article:nth-child(even) {
 
 .products-item figure img {
 	object-fit: cover;
-	width: 100%;
 	height: 100%;
 }
 
@@ -323,7 +322,7 @@ main article:nth-child(even) {
 	font-size: 3rem;
 	align-content: center;
 	text-align: center;
-	justify-self: center;
+	justify-items: center;
 	color: whitesmoke;
 	padding: 3rem;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
@@ -353,12 +352,17 @@ footer a:hover {
 }
 
 @media (min-width: 1250px) {
-	.company-photo-block img {
+	.company-photo-block img,
+	.products-item figure img {
 		max-width: 600px;
 	}
 	.company-photo-block {
 		display: flex;
 		justify-content: center;
+	}
+	.products .products-item:nth-child(even) figure {
+		display: flex;
+		justify-content: right;
 	}
 	main {
 		display: grid;
